Página Web Amigu-arte

--- a/Conoceme.html
+++ b/Conoceme.html
@@ -14,8 +14,9 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
-                height="24">
+            <a class="navbar-brand" href="index.html"><img
+                    src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
+                    height="24">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +31,7 @@
                         <a class="nav-link active" href="Contactame.html">Contactame</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Mis amigurumis
                         </a>
@@ -46,62 +47,78 @@
         </div>
     </nav>
     <h1 class="titulos-pequeños">Tejiendo Sueños: Mi Viaje en el Mundo del Crochet</h1>
-    <div class="image-container">
-        <img src="./imagenes/logos/5387666-removebg-preview.png" alt="" class="imagen-controlada">
-    </div>
-    <p>
-        ¡Hola! Soy Paula, y desde que tengo memoria las agujas y los hilos han sido mis compañeros más fieles. Tejer es
-        más que una
-        simple
-        afición para mí; es mi forma de crear arte y de expresar emociones. Soy una tejedora de crochet apasionada
-        y, en
-        estas líneas, quiero compartir contigo mi viaje en este maravilloso mundo de hilos y ganchillos.
-    </p>
-    <p>
-        Mi amor por el crochet comenzó cuando era apenas una niña. Mi abuela solía sentarse conmigo en las tardes,
-        enseñándome los secretos de este antiguo arte. Las primeras lecciones fueron desafiantes, pero su paciencia
-        infinita y su sabiduría me guiaron en cada punto y cada giro. A medida que tejía, descubrí que cada proyecto
-        tenía su propia historia que contar.
-    </p>
-    <p>
-        Con el tiempo, el crochet se convirtió en una parte esencial de mi vida. Cada puntada es una declaración de amor
-        que
-        añado
-        a mis creaciones. También me emociona tejer amigurumis, esos pequeños seres de hilos que cobran vida en mis
-        manos. Cada uno tiene su propia personalidad y se convierte en un amigo para aquellos que los reciben.
-    </p>
-    <p>
-        Uno de los aspectos más emocionantes de ser tejedora de crochet es la oportunidad de experimentar con
-        colores y
-        texturas. Puedo combinar hilos de diferentes tonalidades y grosores para crear diseños únicos que reflejen
-        mi
-        creatividad y mi estado de ánimo. Los colores suaves y pasteles me transportan a un mundo de calma y
-        serenidad,
-        mientras que los colores brillantes y vibrantes me llenan de alegría y energía.
-    </p>
-    <p>
-        Todas las creaciones que encontrarás aquí, están diseñadas con un propósito especial: son regalos pensados para
-        alegrar a alguien o piezas destinadas a hacer que el día de la persona que las reciba sea un
-        poco más acogedor.
-    </p>
-    <p>
-        Además de la satisfacción personal que obtengo de cada proyecto terminado, también me encanta la comunidad
-        que
-        he encontrado en línea y en grupos locales de tejedores. Compartir patrones, consejos y trucos con otros
-        amantes
-        del crochet es una fuente constante de inspiración. Nos apoyamos mutuamente en nuestros desafíos y
-        celebramos
-        juntos nuestros éxitos.
-    </p>
-    <p>
-        Tejer crochet es mi pasión, mi terapia y mi forma de compartir amor y belleza con el mundo. Cada punto es un
-        recordatorio de la paciencia, la dedicación y la creatividad que todos llevamos dentro. Si alguna vez
-        sientes
-        curiosidad por este arte, te animo a tomar un ganchillo y algunos hilos y a unirte a esta comunidad de
-        tejedores
-        apasionados. Te aseguro que te sorprenderás de lo que puedes crear y de la conexión que puedes encontrar a
-        través de un simple ganchillo y un ovillo de hilo. ¡Felices tejidos!
-    </p>
+    <main>
+        <section>
+            <div class="image-container">
+                <img src="./imagenes/logos/5387666-removebg-preview.png" alt="" class="imagen-controlada">
+            </div>
+            <p>
+                ¡Hola! Soy Rocío, y desde que tengo memoria las agujas y los hilos han sido mis compañeros más fieles.
+                Tejer es
+                más que una
+                simple
+                afición para mí; es mi forma de crear arte y de expresar emociones. Soy una tejedora de crochet
+                apasionada
+                y, en
+                estas líneas, quiero compartir contigo mi viaje en este maravilloso mundo de hilos y ganchillos.
+            </p>
+            <p>
+                Mi amor por el crochet comenzó cuando era apenas una niña. Mi mamá solía sentarse conmigo en las
+                tardes,
+                enseñándome los secretos de este antiguo arte. Las primeras lecciones fueron desafiantes, pero su
+                paciencia
+                infinita y su sabiduría me guiaron en cada punto y cada giro. A medida que tejía, descubrí que cada
+                proyecto
+                tenía su propia historia que contar.
+            </p>
+            <p>
+                Con el tiempo, el crochet se convirtió en una parte esencial de mi vida. Cada puntada es una declaración
+                de amor
+                que
+                añado
+                a mis creaciones. También me emociona tejer amigurumis, esos pequeños seres de hilos que cobran vida en
+                mis
+                manos. Cada uno tiene su propia personalidad y se convierte en un amigo para aquellos que los reciben.
+            </p>
+            <p>
+                Uno de los aspectos más emocionantes de ser tejedora de crochet es la oportunidad de experimentar con
+                colores y
+                texturas. Puedo combinar hilos de diferentes tonalidades y grosores para crear diseños únicos que
+                reflejen
+                mi
+                creatividad y mi estado de ánimo. Los colores suaves y pasteles me transportan a un mundo de calma y
+                serenidad,
+                mientras que los colores brillantes y vibrantes me llenan de alegría y energía.
+            </p>
+            <p>
+                Todas las creaciones que encontrarás aquí, están diseñadas con un propósito especial: son regalos
+                pensados para
+                alegrar a alguien o piezas destinadas a hacer que el día de la persona que las reciba sea un
+                poco más acogedor.
+            </p>
+            <p>
+                Además de la satisfacción personal que obtengo de cada proyecto terminado, también me encanta la
+                comunidad
+                que
+                he encontrado en línea y en grupos locales de tejedores. Compartir patrones, consejos y trucos con otros
+                amantes
+                del crochet es una fuente constante de inspiración. Nos apoyamos mutuamente en nuestros desafíos y
+                celebramos
+                juntos nuestros éxitos.
+            </p>
+            <p>
+                Tejer crochet es mi pasión, mi terapia y mi forma de compartir amor y belleza con el mundo. Cada punto
+                es un
+                recordatorio de la paciencia, la dedicación y la creatividad que todos llevamos dentro. Si alguna vez
+                sientes
+                curiosidad por este arte, te animo a tomar un ganchillo y algunos hilos y a unirte a esta comunidad de
+                tejedores
+                apasionados. Te aseguro que te sorprenderás de lo que puedes crear y de la conexión que puedes encontrar
+                a
+                través de un simple ganchillo y un ovillo de hilo. ¡Felices tejidos!
+            </p>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <ul>
@@ -118,7 +135,6 @@
             </ul>
             <p>
                 Imagenes obtenidas personalmente
-                <!-- sino agregar link -->
             </p>
             <p>
                 &copy; 2023 Amigu-arte
@@ -126,8 +142,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
