--- a/ParaJugar.html
+++ b/ParaJugar.html
@@ -15,8 +15,9 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
-                height="24">
+            <a class="navbar-brand" href="index.html"><img
+                    src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
+                    height="24">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +32,7 @@
                         <a class="nav-link active" href="Contactame.html">Contactame</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Mis amigurumis
                         </a>
@@ -47,59 +48,70 @@
         </div>
     </nav>
     <h1 class="titulos-pequeños">Para jugar</h1>
-    <ul class="lista-productos">
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190206_171347.jpg" alt="">
-            <h2 class="titulo-producto">Oso encastrable</h2>
-            <p class="descripcion-producto">Es un juguete encantador que combina la suavidad de un peluche con la
-                diversión de encastrarlo. Con sus piezas tejidas a mano, invita a los niños a aprender y jugar
-                mientras ensamblan este adorable amigo.
-            </p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190109_121847.jpg" alt="">
-            <h2 class="titulo-producto">Unicornio</h2>
-            <p class="descripcion-producto">Un unicornio tejido al crochet es un mágico y tierno compañero de peluche
-                que hará que los corazones de niños y adultos se iluminen. Con su colorido y detallado diseño tejido a
-                mano, este unicornio es la perfecta combinación entre lo lúdico y lo artesanal. Un regalo que despierta
-                sonrisas y fantasía.
-            </p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200705_183021333.jpg" alt="">
-            <h2 class="titulo-producto">Unicornio</h2>
-            <p class="descripcion-producto">Este adorable unicornio tejido al crochet es más encantador gracias a su
-                vincha de flores. Sus colores suaves y la delicada elaboración a mano hacen que este unicornio sea una
-                verdadera obra de arte. Sus flores aportan un toque de color y elegancia, convirtiéndolo en el compañero
-                perfecto para quienes buscan un toque de magia y belleza en sus vidas.
-            </p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/CAM00637.jpg" alt="">
-            <h2 class="titulo-producto">Animales Varios</h2>
-            <p class="descripcion-producto">Descripción del Producto 4.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011651.jpg" alt="">
-            <h2 class="titulo-producto">Pulpo reversible</h2>
-            <p class="descripcion-producto">Descripción del Producto 5.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011617.jpg" alt="">
-            <h2 class="titulo-producto">Pulpo reversible</h2>
-            <p class="descripcion-producto">Descripción del Producto 6.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200831_213821447.jpg" alt="">
-            <h2 class="titulo-producto">Llamitas</h2>
-            <p class="descripcion-producto">Descripción del Producto 7.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20210622_201224351.jpg" alt="">
-            <h2 class="titulo-producto">Animales varios</h2>
-            <p class="descripcion-producto">Descripción del Producto 8.</p>
-        </li>
-    </ul>
+    <main>
+        <section>
+            <ul class="lista-productos">
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190206_171347.jpg" alt="">
+                    <h2 class="titulo-producto">Oso encastrable</h2>
+                    <p class="descripcion-producto">Es un juguete encantador que combina la suavidad de un peluche con
+                        la
+                        diversión de encastrarlo. Con sus piezas tejidas a mano, invita a los niños a aprender y jugar
+                        mientras ensamblan este adorable amigo.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190109_121847.jpg" alt="">
+                    <h2 class="titulo-producto">Unicornio</h2>
+                    <p class="descripcion-producto">Un unicornio tejido al crochet es un mágico y tierno compañero de
+                        peluche
+                        que hará que los corazones de niños y adultos se iluminen. Con su colorido y detallado diseño
+                        tejido a
+                        mano, este unicornio es la perfecta combinación entre lo lúdico y lo artesanal. Un regalo que
+                        despierta
+                        sonrisas y fantasía.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200705_183021333.jpg" alt="">
+                    <h2 class="titulo-producto">Unicornio</h2>
+                    <p class="descripcion-producto">Este adorable unicornio tejido al crochet es más encantador gracias
+                        a su
+                        vincha de flores. Sus colores suaves y la delicada elaboración a mano hacen que este unicornio
+                        sea una
+                        verdadera obra de arte. Sus flores aportan un toque de color y elegancia, convirtiéndolo en el
+                        compañero
+                        perfecto para quienes buscan un toque de magia y belleza en sus vidas.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/CAM00637.jpg" alt="">
+                    <h2 class="titulo-producto">Animales Varios</h2>
+                    <p class="descripcion-producto">Descripción del Producto 4.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011651.jpg" alt="">
+                    <h2 class="titulo-producto">Pulpo reversible</h2>
+                    <p class="descripcion-producto">Descripción del Producto 5.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011617.jpg" alt="">
+                    <h2 class="titulo-producto">Pulpo reversible</h2>
+                    <p class="descripcion-producto">Descripción del Producto 6.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200831_213821447.jpg" alt="">
+                    <h2 class="titulo-producto">Llamitas</h2>
+                    <p class="descripcion-producto">Descripción del Producto 7.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20210622_201224351.jpg" alt="">
+                    <h2 class="titulo-producto">Animales varios</h2>
+                    <p class="descripcion-producto">Descripción del Producto 8.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <ul>
@@ -116,7 +128,6 @@
             </ul>
             <p>
                 Imagenes obtenidas personalmente
-                <!-- sino agregar link -->
             </p>
             <p>
                 &copy; 2023 Amigu-arte
@@ -124,8 +135,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
