--- a/ParaBelleza.html
+++ b/ParaBelleza.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +11,13 @@
     <link rel="stylesheet" href="./styleAmig.css">
     <title>Amigu-arte</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
-                height="24">
+            <a class="navbar-brand" href="index.html"><img
+                    src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
+                    height="24">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +32,7 @@
                         <a class="nav-link active" href="Contactame.html">Contactame</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Mis amigurumis
                         </a>
@@ -45,23 +48,27 @@
         </div>
     </nav>
     <h1 class="titulos-pequeños">Para mi belleza</h1>
-    <ul class="lista-productos">
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050957.jpg" alt="">
-            <h2 class="titulo-producto">Esponja de baño</h2>
-            <p class="descripcion-producto">Descripción del Producto 1.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129051202.jpg" alt="">
-            <h2 class="titulo-producto">Discos desmaquillantes</h2>
-            <p class="descripcion-producto">Descripción del Producto 2.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050747.jpg" alt="">
-            <h2 class="titulo-producto">Vincha</h2>
-            <p class="descripcion-producto">Descripción del Producto 3.</p>
-        </li>
-    </ul>
+    <main>
+        <section>
+            <ul class="lista-productos">
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050957.jpg" alt="">
+                    <h2 class="titulo-producto">Esponja de baño</h2>
+                    <p class="descripcion-producto">Descripción del Producto 1.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129051202.jpg" alt="">
+                    <h2 class="titulo-producto">Discos desmaquillantes</h2>
+                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050747.jpg" alt="">
+                    <h2 class="titulo-producto">Vincha</h2>
+                    <p class="descripcion-producto">Descripción del Producto 3.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <ul>
@@ -78,7 +85,6 @@
             </ul>
             <p>
                 Imagenes obtenidas personalmente
-                <!-- sino agregar link -->
             </p>
             <p>
                 &copy; 2023 Amigu-arte
@@ -86,7 +92,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
