--- a/ParaHogar.html
+++ b/ParaHogar.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active" href="Contactame.html">Contactame</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Mis amigurumis
                         </a>
@@ -48,32 +48,38 @@
         </div>
     </nav>
     <h1 class="titulos-pequeños">Para el hogar</h1>
-    <ul class="lista-productos">
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/hogar/CAM00378.jpg" alt="">
-            <h2 class="titulo-producto">Agarraderas tejidas al crochet en forma de oveja</h2>
-            <p class="descripcion-producto">Encantadoras y prácticas, estas agarraderas tejidas a mano añaden un toque
-                rústico y adorable a tu cocina. Su suave textura y diseño de oveja las hacen ideales para protegerte del
-                calor de las ollas y sartenes
-                mientras cocinas.
-            </p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20170910_114352.jpg" alt="">
-            <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
-            <p class="descripcion-producto">Descripción del Producto 2.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180823_215925.jpg" alt="">
-            <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
-            <p class="descripcion-producto">Descripción del Producto 2.</p>
-        </li>
-        <li class="producto">
-            <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180904_200459.jpg" alt="">
-            <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
-            <p class="descripcion-producto">Descripción del Producto 2.</p>
-        </li>
-    </ul>
+    <main>
+        <section>
+            <ul class="lista-productos">
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/hogar/CAM00378.jpg" alt="">
+                    <h2 class="titulo-producto">Agarraderas tejidas al crochet en forma de oveja</h2>
+                    <p class="descripcion-producto">Encantadoras y prácticas, estas agarraderas tejidas a mano añaden un
+                        toque
+                        rústico y adorable a tu cocina. Su suave textura y diseño de oveja las hacen ideales para
+                        protegerte del
+                        calor de las ollas y sartenes
+                        mientras cocinas.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20170910_114352.jpg" alt="">
+                    <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
+                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180823_215925.jpg" alt="">
+                    <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
+                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180904_200459.jpg" alt="">
+                    <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
+                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <ul>
@@ -90,7 +96,6 @@
             </ul>
             <p>
                 Imagenes obtenidas personalmente
-                <!-- sino agregar link -->
             </p>
             <p>
                 &copy; 2023 Amigu-arte
@@ -99,7 +104,8 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
