--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
             </div>
         </div>
     </nav>
-    <h1>Amigu-arte</h1>
-    <div class="image-container">
-        <img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="" class="logo-controlado">
-    </div>
+    <main>
+        <h1>Amigu-arte</h1>
+        <div class="image-container">
+            <img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="" class="logo-controlado">
+        </div>
+    </main>
     <footer>
         <div class="container">
             <ul>
@@ -66,7 +68,6 @@
             </ul>
             <p>
                 Imagenes obtenidas personalmente
-                <!-- sino agregar link -->
             </p>
             <p>
                 &copy; 2023 Amigu-arte
@@ -75,7 +76,8 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
