Página Web Amigu-arte

--- a/ParaHogar.html
+++ b/ParaHogar.html
@@ -65,17 +65,35 @@
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20170910_114352.jpg" alt="">
                     <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
-                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                    <p class="descripcion-producto">Las porciones de torta o donas tejidas al crochet para usar como
+                        alfileteros son auténticas golosinas de artesanía. Cada porción está elaborada con hilos de
+                        colores realistas que imitan los sabores de las tortas o donas, como chocolate, fresa o
+                        vainilla. Los detalles incluyen texturas que replican la apariencia esponjosa de la masa y los
+                        adornos, como glaseado o chispas de colores. Estas miniaturas son funcionales y a la vez
+                        decorativas, perfectas para mantener los alfileres organizados mientras añaden un toque dulce a
+                        tu espacio de costura.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180823_215925.jpg" alt="">
                     <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
-                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                    <p class="descripcion-producto">Las hamburguesas tejidas al crochet diseñadas para usar como
+                        alfileteros son piezas de artesanía ingeniosas y divertidas. Cada hamburguesa está confeccionada
+                        con hilos de diversos colores para representar las distintas capas de una hamburguesa, como el
+                        pan, la carne, el queso, lechuga y tomate. Estas miniaturas son funcionales y a la
+                        vez decorativas, perfectas para mantener los alfileres organizados mientras añaden un toque de
+                        originalidad a tu espacio de costura.</p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180904_200459.jpg" alt="">
                     <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
-                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                    <p class="descripcion-producto">Las frutas y verduras tejidas al crochet utilizadas como porta
+                        repasadores son creativas y prácticas. Cada pieza está elaborada con hilos de colores vivos que
+                        imitan la apariencia real de las frutas y verduras. Puedes encontrar desde manzanas y peras
+                        hasta zanahorias y pimientos. Los detalles, como las texturas de la piel de la fruta o la forma
+                        de las hojas, se tejen con precisión. Estos porta repasadores añaden un toque de diversión y
+                        funcionalidad a tu cocina, permitiéndote colgar tus repasadores en un lugar accesible mientras
+                        decoras tu hogar de una manera única y encantadora.</p>
                 </li>
             </ul>
         </section>
@@ -103,9 +121,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
