--- a/Contactame.html
+++ b/Contactame.html
@@ -53,8 +53,7 @@
             <p>
                 ¿Te gustaría hablar de tejido, explorar nuevas ideas y hacer amigurumis? ¡Estoy aquí
                 para ti! Como apasionada tejedora de crochet, me encantaría escuchar tus ideas, responder a tus
-                preguntas o
-                colaborar contigo en proyectos especiales.
+                preguntas o colaborar contigo en proyectos especiales.
             </p>
             <div class="image-container">
                 <img src="./imagenes/logos/concepto-estancia-casa-rutina-diurna-chica-que-trabaja-casa-gato_564312-213-removebg-preview.png"
@@ -63,11 +62,22 @@
 
             <p>
                 Ya sea que quieras explorar patrones, aprender nuevas técnicas o simplemente charlar sobre tejido, estoy
-                aquí
-                para ayudarte. ¡No dudes en ponerte en contacto conmigo! Estoy emocionada de compartir mi amor por el
-                crochet
-                contigo y de convertir tus ideas en hermosas creaciones tejidas a mano.
+                aquí para ayudarte. ¡No dudes en ponerte en contacto conmigo! Estoy emocionada de compartir mi amor por
+                el
+                crochet contigo y de convertir tus ideas en hermosas creaciones tejidas a mano.
             </p>
+            <p>
+                A continuación te dejo un video donde te muestro algo de lo que puedes aprender si me contactas.
+            </p>
+        </section>
+        <section class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EmdMnGRmGYQ?si=VdrFmvJWbkda9TJc"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
+        </section>
+        <section>
             <p>
                 Recuerda que cada pieza tejida tiene su propia historia que contar, y juntos podemos crear algo
                 verdaderamente
@@ -126,9 +136,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
