--- a/ParaBelleza.html
+++ b/ParaBelleza.html
@@ -54,17 +54,28 @@
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050957.jpg" alt="">
                     <h2 class="titulo-producto">Esponja de baño</h2>
-                    <p class="descripcion-producto">Descripción del Producto 1.</p>
+                    <p class="descripcion-producto">La esponja de baño tejida al crochet es una opción elegante para tu
+                        rutina de higiene personal. Hecha de hilos suaves y absorbentes. Su tejido proporciona un suave
+                        masaje en la piel mientras elimina las impurezas.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129051202.jpg" alt="">
                     <h2 class="titulo-producto">Discos desmaquillantes</h2>
-                    <p class="descripcion-producto">Descripción del Producto 2.</p>
+                    <p class="descripcion-producto">Estos discos están tejidos con hilos suaves y absorbentes que
+                        permiten retirar suavemente el maquillaje. Son reutilizables y respetuosos con el medio
+                        ambiente. Cada disco presenta una textura ligeramente rugosa para una limpieza eficaz. Vienen en
+                        una variedad de colores y patrones, lo que agrega un toque de elegancia a tu rutina de belleza.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050747.jpg" alt="">
                     <h2 class="titulo-producto">Vincha</h2>
-                    <p class="descripcion-producto">Descripción del Producto 3.</p>
+                    <p class="descripcion-producto" >La vincha tejida al crochet es un accesorio para el cabello que
+                        combina comodidad y estilo. Está confeccionada con hilos suaves que no dañan el cabello y
+                        presenta un patrón atractivo. Es ideal para mantener el cabello fuera del rostro mientras te
+                        maquillas o limpias tu rostro. La elasticidad del tejido asegura un ajuste cómodo. 
+                    </p>
                 </li>
             </ul>
         </section>
@@ -92,9 +103,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
